<resources>
    <string name="app_name">云慧助手</string>
    <string name="login_hite">足不出户体验云挖矿</string>
    <string name="login_phonenum">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_login">进入云慧助手</string>
    <string name="login_regist">手机注册</string>
    <string name="login_forgetpassword">忘记密码</string>

    <string name="regist_hite_title">云慧助手\n足不出户体验云挖矿</string>
    <string name="regist_send_validation">发送验证码</string>
    <string name="regist_phonenum">请输入手机号码</string>
    <string name="regist_validation">请输入验证码</string>
    <string name="regist_password">请输入您的密码</string>
    <string name="regist_confirm_password">请确认您的密码</string>
    <string name="regist_invite_code">请输入邀请码（选填）</string>
    <string name="regist_regist_enter">注册进入云慧助手</string>
    <string name="regist_login_login">手机账号密码登录</string>
    <string name="regist_phonenum_toast">您输入的手机号码不合法</string>
    <string name="regist_validation_toast">您输入的验证码不合法</string>

    <string name="retrieve_password_phonenum">请输入手机号码</string>
    <string name="retrieve_password_next">下一步</string>
    <string name="retrieve_password_validation">请输入验证码</string>
    <string name="retrieve_password_send_validation">发送验证码</string>
    <string name="retrieve_password_password">请输入您的密码</string>
    <string name="retrieve_password_confirm_password">请确认您的密码</string>
    <string name="retrieve_password_done">完成</string>

    <string name="earnings_hite_top">我的云钻</string>
    <string name="earnings_hite_day">每日收益</string>
    <string name="earnings_hite_vip">VIP等级</string>
    <string name="earnings_hite_mypower">我的电量</string>
    <string name="earnings_hite_electricity_than">电量占比</string>
    <string name="earnings_hite_points_num">积分总数</string>
    <string name="earnings_hite_middle">云慧云矿池</string>
    <string name="earnings_hite_middle_first">全国电量:</string>
    <string name="earnings_hite_middle_first_hite">(所有用户贡献总电量)</string>
    <string name="earnings_hite_middle_second">全部收益:</string>
    <string name="earnings_hite_middle_second_hite">(按电量占比分配总收益)</string>
    <string name="earnings_hite_bottom_hite">全网电量排名</string>
    <string name="earnings_hite_middle_hite">获取云钻太慢？？？尝试购买下面云钻矿机</string>
    <string name="earnings_hite_buy">立即购买</string>
    <string name="earnings_hite_all_top">我的BTC</string>
    <string name="earnings_bronze">青铜矿机</string>
    <string name="earnings_silver">白银矿机</string>
    <string name="earnings_gold">黄金矿机</string>
    <string name="earnings_dayearn">每日云钻</string>

    <string name="exchange_hite_top">云钻兑换BTC(1000云钻=0.000065BTC)</string>
    <string name="exchange_hite_num">请您输入云钻数量</string>
    <string name="exchange_hite_all">全部云钻</string>
    <string name="exchange_hite_password">您的密码</string>
    <string name="exchange_hite_cancle">取消</string>
    <string name="exchange_hite_confirm">确认兑换</string>
    
    <string name="invite_code_hite">我的邀请码</string>
    <string name="invite_code_qrcode_hite">我的二维码</string>
    <string name="invite_code_warmprompt_hite">温馨提示：保存二维码照片，发给好友，好友注册云慧助手，每个好友奖励1000钻石，最多推荐10个好友</string>

    <string name="extract_top_hite">提取BTC</string>
    <string name="extract_all_num">全部BTC</string>
    <string name="extract_wallet">您的钱包地址</string>
    <string name="extract_SMS">短信验证码</string>
    <string name="extract__hite_confirm">确认提取</string>
    <string name="extract_hite_num">请输入BTC数量</string>
    <string name="button_ok">重新登录</string>


    <!--自定义下拉刷新上滑加载ListView-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="ui_progress_dialog_default_message">正在加载 ...</string>
    <string name="com_not_updated_yet">暂未更新过</string>
    <string name="com_updated_at">上次更新于%1$s前</string>
    <string name="com_updated_just_now">刚刚更新</string>
    <string name="ui_certain">确定</string>
    <string name="ui_cancel">取消</string>
    <string name="ui_retry">重试</string>
    <string name="ui_yes">是</string>
    <string name="ui_no">否</string>
    <string name="ui_back">返回</string>
    <string name="com_noupdate">以后在说</string>
    <string name="plat_retry">重试</string>
    <string name="plat_download">正在下载</string>
    <string name="plat_upgrade">立即更新</string>
    <string name="core_upgrade_lakala">升级云慧助手</string>
    <string name="core_download_lakala">开始下载云慧助手</string>
    <string name="core_downloading_lakala">正在下载云慧助手</string>
    <string name="core_downloading_progress">正在下载云慧助手%d</string>
    <string name="core_download_lakala_complete">下载云慧助手</string>
    <string name="core_download_lakala_complete_prompt">下载云慧助手完成,确定安装</string>
    <string name="core_download_lakala_fail">下载云慧助手失败</string>
    <string name="core_install">安装</string>

    <string name="guess_hite">云慧助手竞猜可用云钻进行竞猜,每注1000云钻</string>

    <string name="recharge_hite">充值送云钻，多充多送</string>
    
    <string name="about_app_text">云慧助手是一款基于区块链技术的共享云挖矿的APP，让普通用户足不出户享受数字化资产带来的收益，并且免除专业矿机造成的电费消耗和噪音困扰，使得大众用户在云慧助手上充值或者购买云矿机实现挖矿带来的收益和效率，帮助用户实现数字资产的选择配置和原始积累，也可以通过云慧提供的任务环节获取固定量的数字资产。</string>
    <string name="butmillhite">1、云慧矿机是一道有彩蛋的数学计算题,不知道您是否已经发现了,如果发现了还不动手购买,我想您需要仔细再算一下哦！\n 2、数字矿机属于特殊商品一经出售,从购买日期当天算起,3天内可无条件退款,一旦退款您的收益部分将会被清零,使用超过3天将无法退款,请您知悉。</string>
</resources>
