<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/AppTheThemeColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earnings_hite_top"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earnings_hite_day"/>
        <TextView
            android:id="@+id/earningshiteday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00000023 BTC"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earnings_hite_middle_hite"/>
    </LinearLayout>

    <com.yunhui.component.refreshlistview.RefreshListView
        android:id="@+id/earningsrefeesh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:dividerHeight="1dp"
        android:scrollbars="none"
        android:divider="@color/l_gray"/>



</LinearLayout>