<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/AppTheThemeColor"
    android:padding="@dimen/dimen_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200"
        android:orientation="horizontal"
        android:background="@color/color_2b2e34"
        android:gravity="center_vertical">

        <com.yunhui.component.image.CircleImageView
            android:id="@+id/extracteuserphoto"
            android:layout_width="@dimen/dimen_160"
            android:layout_height="@dimen/dimen_160"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon_log"
            android:layout_marginLeft="@dimen/dimen_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_160"
            android:layout_marginLeft="@dimen/dimen_30"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/extracteuserphonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/color_959697"
                android:textSize="@dimen/font_size_normal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/extractclouddrill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="云钻:"
                    android:textColor="@color/color_959697"
                    android:textSize="@dimen/font_size_normal" />
                <TextView
                    android:id="@+id/extractBTC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BTC:"
                    android:textColor="@color/color_959697"
                    android:textSize="@dimen/font_size_normal"
                    android:layout_marginLeft="@dimen/dimen_30"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extract_top_hite"
            android:textColor="@color/color_959697"
            android:textSize="@dimen/font_size_normal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/extractnum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawablePadding="10dp"
                android:hint="@string/extract_hite_num"
                android:textColor="@color/white"
                android:textColorHint="@color/color_646565"
                android:textSize="@dimen/font_size_small"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:theme="@style/MyEditText"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/extractAllNum"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_80"
                    android:background="@null"
                    android:text="@string/extract_all_num"
                    android:textColor="@color/color_EE9707"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20"
        android:orientation="vertical">
        <TextView
            android:id="@+id/poundage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extract_wallet"
            android:textColor="@color/color_959697"
            android:textSize="@dimen/font_size_normal"/>
        <EditText
            android:id="@+id/extractwallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/color_646565"
            android:textSize="@dimen/font_size_small"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:theme="@style/MyEditText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extract_SMS"
            android:textColor="@color/color_959697"
            android:textSize="@dimen/font_size_normal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/extractSMS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_646565"
                android:textSize="@dimen/font_size_small"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:theme="@style/MyEditText"/>
            <Button
                android:id="@+id/extractSendSMS"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_80"
                android:layout_weight="1"
                android:text="获取验证码"
                android:textSize="@dimen/font_size_small"
                android:background="@drawable/bg_roundedrectangle"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_60">
        <Button
            android:id="@+id/extractcancle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_80"
            android:text="@string/exchange_hite_cancle"
            android:background="@drawable/bg_roundedrectangle"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/dimen_40"
            android:visibility="gone"/>
        <Button
            android:id="@+id/extractconfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_80"
            android:text="@string/extract__hite_confirm"
            android:background="@drawable/bg_roundedrectangle"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>