<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppTheThemeColor">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_40"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_hite_title"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/color_959697"
                    android:textSize="@dimen/font_size_normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingRight="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_20">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/registphonenum"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dimen_80"
                        android:layout_weight="4"
                        android:background="@null"
                        android:hint="@string/regist_phonenum"
                        android:textCursorDrawable="@drawable/bg_cursor"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_646565"
                        android:textSize="@dimen/font_size_small"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:visibility="gone"/>
                    <Button
                        android:id="@+id/registsendvalidation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@string/regist_send_validation"
                        android:background="@drawable/bg_roundedrectangle"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="4"
                        android:background="@color/white"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="1dp"
                        android:background="@null"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingRight="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_20">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/registvalidation"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_80"
                        android:background="@null"
                        android:hint="@string/regist_validation"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_646565"
                        android:textSize="@dimen/font_size_small"
                        android:textCursorDrawable="@drawable/bg_cursor"
                        android:theme="@style/MyEditText"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingRight="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_20">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/registpassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_80"
                        android:background="@null"
                        android:hint="@string/regist_password"
                        android:textCursorDrawable="@drawable/bg_cursor"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_646565"
                        android:textSize="@dimen/font_size_small"
                        android:inputType="numberPassword"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingRight="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_20">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/registconfirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_80"
                        android:background="@null"
                        android:hint="@string/regist_confirm_password"
                        android:textCursorDrawable="@drawable/bg_cursor"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_646565"
                        android:textSize="@dimen/font_size_small"
                        android:inputType="numberPassword"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingRight="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_20">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/registinvitecode"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_80"
                        android:background="@null"
                        android:hint="@string/regist_invite_code"
                        android:textCursorDrawable="@drawable/bg_cursor"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_646565"
                        android:textSize="@dimen/font_size_small"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dimen_20"
                android:paddingRight="@dimen/dimen_20"
                android:paddingTop="@dimen/dimen_20">
                <Button
                    android:id="@+id/registenter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_100"
                    android:text="@string/regist_regist_enter"
                    android:background="@drawable/bg_roundedrectangle"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20">
                <Button
                    android:id="@+id/registloginenter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_100"
                    android:text="@string/regist_login_login"
                    android:textColor="@color/color_EE9707"
                    android:background="#00000000"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>