<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppTheThemeColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingRight="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/retrievepasswordvalidation"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_80"
                android:layout_weight="4"
                android:background="@null"
                android:hint="@string/retrieve_password_validation"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:theme="@style/MyEditText"
                android:textColor="@color/white"
                android:textColorHint="@color/color_646565"
                android:textSize="@dimen/font_size_small"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginRight="@dimen/dimen_10"
                android:visibility="gone"/>
            <Button
                android:id="@+id/retrievepasswordsendvalidation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/retrieve_password_send_validation"
                android:background="@drawable/bg_roundedrectangle"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="4"
                android:background="@color/white"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingRight="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/retrievepasswordpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_80"
                android:background="@null"
                android:hint="@string/retrieve_password_password"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:theme="@style/MyEditText"
                android:textColor="@color/white"
                android:textColorHint="@color/color_646565"
                android:textSize="@dimen/font_size_small"
                android:inputType="numberPassword"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingRight="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/retrievepasswordconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_80"
                android:background="@null"
                android:hint="@string/retrieve_password_confirm_password"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:theme="@style/MyEditText"
                android:textColor="@color/white"
                android:textColorHint="@color/color_646565"
                android:textSize="@dimen/font_size_small"
                android:inputType="textPassword"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/dimen_30"
        android:paddingRight="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30">
        <Button
            android:id="@+id/retrievepassworddone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100"
            android:text="@string/retrieve_password_done"
            android:background="@drawable/bg_roundedrectangle"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>